k8s/apps/clinica/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinica-deployment
  namespace: default
  labels:
    app: clinica
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clinica
  template:
    metadata:
      labels:
        app: clinica
    spec:
      containers:
      - name: clinica
        image: srikanthkakumanu/clinica:latest  # Replace with your Docker image
        ports:
        - containerPort: 9091
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9091
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9091
          initialDelaySeconds: 30
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 9091
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 30
